#1691 Add root, parent, left, right navigation to /lead/1

--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -6,8 +6,27 @@
   <% end %>
 
   <div class="navigation-controls">
-      <%= link_to( content_tag(:span, 'Use key', data: {icon: :show}, class: 'small-icon' ), "/tasks/leads/show?lead_id=#{@lead.id}", class: 'navigation-item' ) -%>
+      <%= link_to( content_tag(:span, 'Use key', class: 'small-icon' ), "/tasks/leads/show?lead_id=#{@lead.id}", class: 'navigation-item' ) -%>
   </div>
+
+   <% if @lead.parent_id -%>
+    <div class="navigation-controls">
+      <%= link_to( content_tag(:span, 'Key root', data: {icon: :show}, class: 'small-icon' ), "/leads/#{@lead.root.id}", class: 'navigation-item' ) -%>
+    </div>
+    <div class="navigation-controls">
+      <%= link_to( content_tag(:span, 'Parent', data: {icon: :show}, class: 'small-icon' ), "/leads/#{@lead.parent.id}", class: 'navigation-item' ) -%>
+    </div>
+  <% end %>
+
+  <% if @lead.children.size == 2 -%>
+    <div class="navigation-controls">
+      <%= link_to( content_tag(:span, 'Left child', data: {icon: :show}, class: 'small-icon' ), "/leads/#{@lead.children[0].id}", class: 'navigation-item' ) -%>
+    </div>
+
+    <div class="navigation-controls">
+      <%= link_to( content_tag(:span, 'Right child', data: {icon: :show}, class: 'small-icon' ), "/leads/#{@lead.children[1].id}", class: 'navigation-item' ) -%>
+    </div>
+  <% end %>
 <% end %>
 
 <%= render(partial: 'shared/data/project/show', locals: {object: @lead}) -%>
