--- a/app/assets/stylesheets/base/column_layouts.scss
+++ b/app/assets/stylesheets/base/column_layouts.scss
@@ -98,6 +98,16 @@ http://css-tricks.com/snippets/css/a-guide-to-flexbox/
   flex-direction: column !important;
 }
 
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
 .item {
   word-wrap: break-word;
   flex: 1 auto;
