--- a/app/views/otus/new.html.erb
+++ b/app/views/otus/new.html.erb
@@ -1,3 +1,5 @@
 <h1>New OTU</h1>
 
+<%= tag.div(link_to('A task is available.', new_otu_task_path), class: [:feedback, 'feedback-notice']) %>
+
 <%= render 'form' %>
