--- a/app/assets/javascripts/workbench/notices.js.erb
+++ b/app/assets/javascripts/workbench/notices.js.erb
@@ -55,9 +55,13 @@ Object.assign(TW.workbench.alert, {
   },
 
   play: function (type) {
-    if (!document.hidden) {
-      const sound = new Audio(this.audioFile[type] || this.audioFile.default);
-      sound.play();
+    try {
+      if (!document.hidden) {
+        const sound = new Audio(this.audioFile[type] || this.audioFile.default);
+        sound.play();
+      }
+    } catch(e) {
+      console.log(e)
     }
   }
 });
