Fix route reference

--- a/app/views/administration/index.html.erb
+++ b/app/views/administration/index.html.erb
@@ -36,7 +36,7 @@
       <ul class="no_bullets list list-arrow">
         <%= content_tag(:li, link_to("Overview", data_overview_path, data: { turbolinks: false })) -%>
         <%= content_tag(:li, link_to("Project classification", project_classification_task_path, data: { turbolinks: false })) -%>
-        <%= content_tag(:li, link_to("Health", data_health_path, data: { turbolinks: false })) -%>
+        <%= content_tag(:li, link_to("Health", administration_data_health_task_path, data: { turbolinks: false })) -%>
         <%= content_tag(:li, link_to("Cached Map Status", cached_maps_status_path, data: { turbolinks: false })) -%>
 
         <%= content_tag(:li, link_to("Reindex", data_reindex_path, data: { turbolinks: false })) -%>
