--- a/app/views/tasks/observation_matrices/observation_matrix_hub/index.html.erb
+++ b/app/views/tasks/observation_matrices/observation_matrix_hub/index.html.erb
@@ -9,7 +9,7 @@
 
 <div class="panels-container content">
 
-  <div class="panel half_width"> 
+  <div class="panel half_width">
     <div class="content">
       <div class="flex-separate middle">
         <h2> Observation matrices </h2>
@@ -18,23 +18,23 @@
       <div id="vue-task-observation-matrix-row"></div>
       <table class="tablesorter full_width">
         <thead>
-          <tr> 
+          <tr>
             <th class="full_width"> Name </th>
-            <th> Rows </th> 
-            <th> Columns </th> 
-            <th> </th> 
-            <th> </th> 
-            <th> </th> 
+            <th> Rows </th>
+            <th> Columns </th>
+            <th> </th>
+            <th> </th>
+            <th> </th>
             <th> </th>
           </tr>
         </thead>
         <tbody>
           <% @observation_matrices.each do |om| %>
-            <%= content_tag(:tr, class: :contextMenuCells) do -%> 
+            <%= content_tag(:tr, class: :contextMenuCells) do -%>
               <td> <%= om.name -%> </td>
-              <td> <%= om.observation_matrix_rows.count -%> </td> 
-              <td> <%= om.observation_matrix_columns.count -%> </td> 
-              <td> <%= link_to('View', observation_matrix_view_task_path(observation_matrix_id: om.id)) -%> </td> 
+              <td> <%= om.observation_matrix_rows.count -%> </td>
+              <td> <%= om.observation_matrix_columns.count -%> </td>
+              <td> <%= link_to('View', observation_matrix_view_task_path(observation_matrix_id: om.id)) -%> </td>
               <td> <%= link_to('Edit', new_matrix_task_path(observation_matrix_id: om.id)) -%> </td>
               <td>
                 <%= link_to('Image matrix', index_matrix_image_task_path(observation_matrix_id: om.id)) if om.is_media_matrix? -%>
@@ -52,7 +52,7 @@
   <div class="panel margin-medium-left one_quarter_width">
     <div class="content">
       <div class="flex-separate middle">
-        <h2> Recently created descriptors </h2> 
+        <h2> Recently created descriptors </h2>
         <div> <%= link_to 'New', new_descriptor_task_path(), target: :blank, class: 'button button-default btn-link btn-medium-size'  -%> </div>
       </div>
       <ul>
@@ -66,13 +66,13 @@
 
   <div class="panel margin-medium-left one_quarter_width">
     <div class="content">
-      <h2> Recently coded </h2> 
+      <h2> Recently coded </h2>
       <% [Otu, CollectionObject].each do |c| -%>
 
         <h3> <%= c.name -%>s </h3>
 
         <ul>
-          <% c.recently_observed.where(project_id: sessions_current_project_id).limit(10).distinct.each do |o| %>
+          <% c.recently_observed.where(project_id: sessions_current_project_id).order(updated_at: :desc).limit(10).distinct.each do |o| %>
             <%= content_tag(:li, object_link(o)) -%>
           <% end %>
         </ul>
