Export TW gap charstates as the special nexus gap state
Character states in TW must have a non-empty name, but nexus gap states are (typically) specified in a matrix by a special (global) gap symbol that is not a character state and has no name.

With the previous export, where we were adding 'gap' as a character state on descriptors which used a gap state, and then put a dash in the matrix table as the label for that state, Mesquite was:
* interpreting the '-' in the matrix table as a nexus (global) gap state, even though we weren't specifying a nexus gap symbol [also note that '-' is not in the list of symbols that we export, though I doubt that's why Mesquite interprets '-' as gap], and
* also keeping the 'gap' character state for descriptors that used it, which messed up (sequential) labelling of character states for descriptors and led to incorrect interpretation of the matrix data.

We just assume here that the gap state, if used at all, has symbol '-', though that's not required by TW or nexus.

--- a/app/views/observation_matrices/export/nexus/_nexus.html.erb
+++ b/app/views/observation_matrices/export/nexus/_nexus.html.erb
@@ -21,11 +21,12 @@ Title qualitative_characters;
 Dimensions Nchar=<%= descriptors.size -%>;
 Format
 <%= as_file ? '  ' : nb -%>datatype = STANDARD
+<%= as_file ? '  ' : nb -%>gap = -
 <%= as_file ? '  ' : nb -%>missing = ?
 <%= as_file ? '  ' : nb -%>symbols = "0 1 2 3 4 5 6 7 8 9 A B C D E F G H I J K L M N P Q R S U V W X Y Z !";
 Charstatelabels
 <% descriptors.each_with_index do |d, i| -%>
-  <%= as_file ? '  ' : nb -%><%= "#{i+1} #{descriptor_matrix_label(d).html_safe} /".html_safe %> <%= d.character_states.order(:position).collect{|cs| "'#{cs.name}'".html_safe}.join(' ').html_safe if d.qualitative? -%>,
+  <%= as_file ? '  ' : nb -%><%= "#{i+1} #{descriptor_matrix_label(d).html_safe} /".html_safe %> <%= d.character_states.order(:position).filter_map{|cs| "'#{cs.name}'".html_safe if cs.name.downcase != 'gap'}.join(' ').html_safe if d.qualitative? -%>,
 <% end %>
 ;
 Matrix
