--- a/app/views/tasks/administrator/project_classification/index.html.erb
+++ b/app/views/tasks/administrator/project_classification/index.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :head do -%>
-  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js", "chartjs" %>
+  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" %>
 <% end %>
 
 <h1>Task [Admin] - Project classification</h1>
