--- a/app/views/gazetteers/_form.html.erb
+++ b/app/views/gazetteers/_form.html.erb
@@ -1,17 +1,9 @@
-<%= form_with(model: gazetteer) do |form| %>
-  <% if gazetteer.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(gazetteer.errors.count, "error") %> prohibited this gazetteer from being saved:</h2>
+<%= content_tag(:span, 'Use the new/edit gazetteer task.', class: [:feedback, 'feedback-warning']) %>
+<br />
+<br />
+<%# TODO %>
+<%= link_to('New/edit gazetteer task', ) %>
+<br />
+<br />
 
-      <ul>
-        <% gazetteer.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
