Add disposition field, add delete option for container items

--- a/app/javascript/vue/assets/styles/utilities.scss
+++ b/app/javascript/vue/assets/styles/utilities.scss
@@ -18,6 +18,12 @@
   box-shadow: none;
 }
 
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @for $i from 1 through 3 {
   .flex-grow-#{$i} {
     flex-grow: $i;
