Relocated SMTP credentials out of application settings file. Added authentication type env var

--- a/config/docker/application_settings.yml.erb
+++ b/config/docker/application_settings.yml.erb
@@ -8,9 +8,8 @@ production:
   action_mailer_smtp_settings:
     address: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_ADDRESS'] %>
     port: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_PORT'] %>
-    user_name: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_USER_NAME'] %>
-    password: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_PASSWORD'] %>
     domain: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_DOMAIN'] %>
+    authentication: <%= ENV['TW_ACTION_MAILER_SMTP_SETTINGS_AUTHENTICATION_TYPE'] %>
   action_mailer_url_host:  <%= ENV['TW_ACTION_MAILER_URL_HOST'] %>
   mail_domain: <%= ENV['TW_MAIL_DOMAIN'] %>
   interface:
