#1954 Change names of st_isvalid, st_isvalidreason, add specs
As I note in the comments, the way it's looking to me is that rails/rgeo/rails-rgeo-adapter is already testing is_valid as a rails validation on the geography column; if so then st_is_valid will always return true.

Also it seems odd that geographic_item.valid? is raising an (rgeo) error instead of just returning false

--- a/app/views/tasks/geographic_items/debug/index.html.erb
+++ b/app/views/tasks/geographic_items/debug/index.html.erb
@@ -16,8 +16,8 @@
       'Basic donut orientations?' => (@geographic_item.is_basic_donut? ? 'Yes' : 'No'),
       'Total polygons' => orientations.count,
       'Orientation (polygons)' => orientations.collect{|o| o ? 'CCW' : 'CW'}.join(', '),
-      'ST_IsValid' => (@geographic_item.st_isvalid ? 'Yes' : 'No'),
-      'ST_IsValidReason' => @geographic_item.st_isvalidreason,
+      'ST_IsValid' => (@geographic_item.st_is_valid ? 'Yes' : 'No'),
+      'ST_IsValidReason' => @geographic_item.st_is_valid_reason,
       'cached_total_area (m)' => @geographic_item.cached_total_area,
       'CachedMapItem#dynamic_buffer' => buffer
     }) %>
@@ -41,7 +41,7 @@
     <%= simple_map([@geographic_item]) -%>
   </div>
 
-  <% if @geographic_item.st_isvalid %>
+  <% if @geographic_item.st_is_valid %>
     <div class="panel content separate-left">
       <h3> WebLevel1 (full translate) </h3>
       <% a = CachedMapItem.translate_geographic_item_id( @geographic_item.id, 'AssertedDistribution', ['ne_states']) %>
