--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -9,10 +9,10 @@ $font-prefix: '../../../node_modules/@ibm/plex';
 @import '../vue/assets/styles/components/borders.scss';
 @import '../vue/assets/styles/utilities/border.scss';
 
-@import 'node_modules/@ibm/plex/scss/sans/light/_latin1.scss';
-@import 'node_modules/@ibm/plex/scss/sans/regular/_latin1.scss';
-@import 'node_modules/@ibm/plex/scss/sans/medium/_latin1.scss';
-@import 'node_modules/@ibm/plex/scss/sans/bold/_latin1.scss';
+@import '@ibm/plex/scss/sans/light/_latin1.scss';
+@import '@ibm/plex/scss/sans/regular/_latin1.scss';
+@import '@ibm/plex/scss/sans/medium/_latin1.scss';
+@import '@ibm/plex/scss/sans/bold/_latin1.scss';
 
 @import '@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.css';
 @import 'easymde/dist/easymde.min.css';
