--- a/app/views/tasks/nomenclature/browse/_catalog.html.erb
+++ b/app/views/tasks/nomenclature/browse/_catalog.html.erb
@@ -10,7 +10,7 @@
       <%= content_tag(:h3, 'References')-%>
       <ul class="citations">
         <% @data.sources.each do |s| -%>
-          <%= content_tag(:li, source_nomenclature_tag(s, @data.topics_for_source(s))) -%>
+          <%= content_tag(:li, source_nomenclature_tag(s, @data.topics_for_source(s)), class: 'horizontal-left-content gap-small') -%>
         <% end %> 
       </ul>                          
     <% end %>
