--- a/app/javascript/vue/assets/styles/variables/_palette.scss
+++ b/app/javascript/vue/assets/styles/variables/_palette.scss
@@ -10,6 +10,7 @@ $tw-colors: (
   'create': #9ccc65,
   'data': #006ebf,
   'destroy': #f44336,
+  'error': #f44336,
   'panel': #ffffff,
   'primary': #5d9ece,
   'secondary': #5a1321,
